--- a/style.css
+++ b/style.css
@@ -1,8 +1,58 @@
-body{
-    background-color: rgb(0, 255, 255);
+:root{
+    --bg-light: rgb(255, 255, 255);
+    --text-dark: #2c3e50;
+    --font-main: 'Segoe UI', sans-serif;
+
+    --h1-bg: #C1ECAF;
+    --h1-text: #1e2d2b;
+    --h2-text: #74A9CB;
+    --h2-border: var(--h1-bg);
+    --h3-text: #D67160;
+
+    --list-bg: #e8f8f0;
+    --list-border: #A1D69A;
+    --strong-text: var(--h3-text);
+    --code-bg: #f0f0f0;
+
+    --def-bg: #f2fef9;
+    --def-border: var(--h1-bg);
+    --def-title: var(--text-dark);
+
+    --nav-bg: var(--h2-text);
+    --nav-text: var(--code-bg);
+
+    --footer-bg: var(--h1-bg); 
+    --footer-text: var(--h1-text);
 }
 
-header{}
-nav{}
-main{}
-footer{}
+
+
+
+body{
+    background-color: rgb(0, 255, 255);
+    body {
+        display:grid;
+        grid-template-areas: 
+        'header'
+        'nav'
+        'main'
+        'footer';
+        grid-template-columns:1fr ;
+        grid-template-rows: 1fr ;
+
+    }
+}
+
+    
+header{
+    grid-area:header;
+}
+nav{
+    grid-area:nav;
+}
+main{
+    grid-area:main;
+}
+footer{
+    grid-area:footer;
+}
