--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
     --font-main: 'Segoe UI', sans-serif;
 
     --h1-bg: #C1ECAF;
-    --h1-text: #1e2d2b;
+    --h1-text: #050505;
     --h2-text: #74A9CB;
     --h2-border: var(--h1-bg);
     --h3-text: #D67160;
@@ -29,7 +29,7 @@
 
 
 body{
-    background-color: rgb(0, 255, 255);
+    background-color: ffffff;
     body {
         display:grid;
         grid-template-areas: 
@@ -42,7 +42,17 @@ body{
 
     }
 }
-
+nav ul {
+list-style: none;
+display: flex;
+justify-content: space-between;
+}
+nav a {
+text-decoration: none;
+}
+nav a:hover {
+text-decoration: underline;
+}
     
 header{
     grid-area:header;
