--- a/style.css
+++ b/style.css
@@ -1,11 +1,12 @@
-:root{
-    --bg-light: rgb(255, 255, 255);
-    --text-dark: #2c3e50;
+:root {
+      --bg-light: rgb(255, 255, 255);
+    --text-dark: #000000;
     --font-main: 'Segoe UI', sans-serif;
 
-    --h1-bg: #C1ECAF;
-    --h1-text: #050505;
+    --h1-bg: #E6BEAE;
+    --h1-text: #000000;
     --h2-text: #74A9CB;
+    --h2-bg: var(--h1-text);
     --h2-border: var(--h1-bg);
     --h3-text: #D67160;
 
@@ -23,13 +24,10 @@
 
     --footer-bg: var(--h1-bg); 
     --footer-text: var(--h1-text);
+
 }
 
 
-
-
-body{
-    background-color: ffffff;
     body {
         display:grid;
         grid-template-areas: 
@@ -41,7 +39,7 @@ body{
         grid-template-rows: 1fr ;
 
     }
-}
+
 nav ul {
 list-style: none;
 display: flex;
@@ -53,9 +51,15 @@ text-decoration: none;
 nav a:hover {
 text-decoration: underline;
 }
-    
+
+h1 {
+    background-color: var(--h1-bg);
+color:var(--h1-text)
+}
+  
 header{
     grid-area:header;
+   
 }
 nav{
     grid-area:nav;
